# florca

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  compose.override.yaml  compose.yaml  deno.json
.cargo/: config.toml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/developer-guide/: architecture.md  cli.md  communication-and-bindings.md  components.md  containers.md  deployer.md  development-environment.md  driver.md  engine.md  monorepo-and-workspaces.md  release-process.md
book/src/reference/: default-plugins.md  release-notes.md
book/src/user-guide/: aws-lambda-functions.md  build-from-source.md  create-a-simple-workflow.md  expose-an-http-endpoint.md  getting-started.md  knative-functions.md  knative-on-a-kubernetes-cluster.md  knative-on-a-self-hosted-server.md  limitations.md  messaging.md  parallel-execution.md  run-a-child-function.md  security.md  self-hosting.md  upgrade.md  workflow-input.md
crates/cli/: Cargo.toml  Dockerfile
crates/cli/src/: cli.rs  lib.rs  main.rs  util.rs
crates/cli/src/command/: completions.rs  delete.rs  deploy.rs  info.rs  inspect.rs  kill.rs  list.rs  message.rs  mod.rs  new.rs  ps.rs  run.rs  templates.rs
crates/cli/src/util/: inspection.rs  template.rs
crates/core/: Cargo.toml
crates/core/src/: deployment.rs  driver.rs  http.rs  inspection.rs  invocation.rs  lib.rs  lookup.rs  provider.rs  ps.rs
crates/core/src/function/: function_config.rs  function_entity.rs  function_name.rs  mod.rs
crates/core/src/run/: mod.rs  run_entity.rs  run_id.rs  run_request.rs
crates/core/src/run/run_id/: all_or_run_id.rs  latest_or_run_id.rs
crates/deployer/: Cargo.toml  Dockerfile
crates/deployer/migrations/: 0001_deployments_table.sql  0002_functions_table.sql
crates/deployer/src/: deployer.rs  detect.rs  errors.rs  http.rs  lib.rs  main.rs  pack.rs  repository.rs  service.rs
crates/deployer/src/aws/: aws_client.rs  aws_deploy.rs  aws_qualifier.rs  mod.rs
crates/deployer/src/kn/: kn_client.rs  kn_deploy.rs  kn_qualifier.rs  mod.rs
crates/deployer/tests/: integration_test.rs
crates/deployer/tests/common/: mock_aws_client.rs  mock_kn_client.rs  mod.rs
crates/deployer/tests/data/aws-example_deployment/plusOne/aws/: index.py
crates/engine/: Cargo.toml  Dockerfile
crates/engine/migrations/: 0001_runs_table.sql  0002_invocations_table.sql
crates/engine/src/: deployer_client.rs  driver.rs  error.rs  http.rs  inspection.rs  kill.rs  lib.rs  main.rs  message.rs  process.rs  ps.rs  repository.rs  run.rs
crates/engine/src/driver/: driver_command.rs  driver_logs.rs
crates/engine/src/http/: completion_endpoint.rs  inspection_endpoint.rs  kill_endpoint.rs  message_endpoints.rs  ps_endpoint.rs  report_endpoint.rs  run_endpoints.rs
docker-entrypoint-initdb.d/: init-deployer-db.sh  init-engine-db.sh
e2e/: Dockerfile  build-and-test.sh  build.sh
e2e/container-scripts/: entrypoint.sh  initdb.sh  test.sh
examples/: test.sh
examples/aws-example/plusOne/: function.toml
examples/demo/transformImage/: function.toml
examples/messaging/aws-py/child/: function.toml
examples/remote-invocation/plusThree/aws/: fn.js
examples/siblings/: sibling.ts  start.ts
examples/siblings-timeout/: sibling.ts  start.ts
examples/tree/: processWithDelay.ts
examples/tree/processNodeOnAws/: function.toml
scripts/: release.sh
templates/: plugin.ts
templates/aws/nodejs22.x/: index.js
templates/aws/python3.13/: index.py
templates/kn/python/: func.py
