[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
fs_extra = "1.3.0"
itertools = "0.14.0"
reqwest = { version = "0.12.23", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }
regex = "1.11.2"
secrecy = "0.10.3"
tempfile = "3.21.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
thiserror = "2"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ts-rs = { version = "11.1.0", features = ["serde-json-impl"] }
walkdir = "2.5.0"
zip = "3.0.0"
zip-extensions = "0.8.3"
