[package]
name = "florca"
version = "0.7.0"
edition = "2024"

[dependencies]
florca-core = { path = "../core" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
fs_extra = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
zip-extensions = { workspace = true }
clap_complete = "4.5.57"
colored = "3.0.0"
ignore = "0.4.23"
rust-embed = "8.7.2"

[lints.clippy]
pedantic = "warn"
