[package]
name = "florca"
version = "0.8.0"
edition = "2024"

[dependencies]
florca-core = { path = "../core" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
fs_extra = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
zip-extensions = { workspace = true }
clap_complete = "4.6.0"
colored = "3.1.1"
ignore = "0.4.25"
rust-embed = "8.11.0"

[lints.clippy]
pedantic = "warn"
