[package]
name = "florca-engine"
version = "0.8.0"
edition = "2024"

[dependencies]
florca-core = { path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true }
zip-extensions = { workspace = true }

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
